--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
   - |
     docker build --build-arg crystal_deb=crystal_0.27.0-1_amd64.deb -t "gcr.io/$PROJECT_ID/trusty_crystal:$COMMIT_SHA" .
     if [ "$BRANCH_NAME" == "master" ]; then
-      docker tag "gcr.io/$PROJECT_ID/trusty_crystal:$COMMIT_SHA" gcr.io/$PROJECT_ID/trusty_crystal:latest
+      docker tag "gcr.io/$PROJECT_ID/trusty_crystal:$COMMIT_SHA" "gcr.io/$PROJECT_ID/trusty_crystal:latest"
     fi
 images:
 - 'gcr.io/$PROJECT_ID/trusty_crystal'
